--- a/doc/latex2/thesis.tex
+++ b/doc/latex2/thesis.tex
@@ -81,11 +81,11 @@
 % \clearpage
 % \listoftables
 
-\chapter{Introduction}
+\chapter{Introduction}\label{chapter:introduction}
 \clearpage
 \include{introduction}
 
-\chapter{Theory}
+\chapter{Theory}\label{chapter:theory}
 \clearpage
 \include{theory}
 
@@ -97,16 +97,16 @@
 \clearpage
 \include{application}
 
-\chapter{Results}
+\chapter{Results}\label{chapter:results}
 \clearpage
 \include{results}
 
-\chapter{Discussion and conclusion}
+\chapter{Discussion and conclusion}\label{chapter:discussion}
 \clearpage
 \include{discussion}
 
 \appendix
-\chapter{Appendix}
+\chapter{Appendix}\label{chapter:appendix}
 \include{appendix}
 
 
