--- a/doc/latex2/application.tex
+++ b/doc/latex2/application.tex
@@ -2,19 +2,29 @@ The following chapter is included to show that the developed hybrid diffusion so
 
 \section{Physical scope}
 
+\begin{figure}[H]
+ \centering
+ \includegraphics[width=0.7\textwidth]{Figures/Cochlear_nucleus_multipolar_cell.jpg}
+ \caption[Pyramidal neuron]{A pyramidal neuron with an apical dendrite (staring by the arrow). The inset shows an amplification of the apical dendrite and illustrates the size of dendritic spines (small outgrowths). The arrow points to the cell body, called the Soma. Note that this image does not show how neurons are located within the brain. Image from \url{www.neurolex.org}.}
+ \label{application:pyramidal_neuron}
+\end{figure}
 
-\emph{\textcolor{red}{Her bør det stå noe om hva vi holder på med og hvor det kommer fra, samt hvorfor det er interessant og hva vi faktisk kommer til å måle (diffusjonstid for walkers gjennom spine neck).}}
+Figure \ref{application:pyramidal_neuron} shows a pyramidal neuron with an apical dendrite, and an inset with dendritic spines. 
+Spines are (often) the receiving end of a chemical synapse, which is a junction between two neurons. 
+This application will look at the diffusion of PKC$\gamma$ in the apical dendrite and into dendritic spines. 
+PKC$\gamma$ is a protein found in neurons which is associated with memory storage and associative learning \cite{saito2002protein}. 
+Upon activation it will diffuse out of the Soma, through a dendrite, and into a dendritic spine to reinforce or reduce the absorption of neurotransmitters. 
+The results will be compared to results by Craske et.al \cite{craske2005spines}, who in 2005 studied a similar problem in rodent pyramidal neurons harvested from the hippocampus.
 
-PKC$\gamma$ is associated with memory storage and will diffuse out of the cell body (soma) of a neuron through a dendrite into a dendritic spine to reinforce the absorption of neurotransmitters. 
-This application is aimed at modeling PKC$\gamma$ diffusion in a dendrite and into spines. 
-Because of symmetry the dendrite will be modeled as 1D continuous diffusion while the diffusion in spines will be modeled as a random walk. 
 Effectively we will investigate the diffusion time for random walkers through spine necks which are very narrow ($\leq0.5\mu$m). 
-The results will be compared to results by Craske et.al \cite{craske2005spines}.
 
 \section{Implementation}
 
-There is a difference between the approach of the developed hybrid solver and the dendrite - spine system with respect to geometry which is best summarized in figure \ref{application:geometry_difference}.
+There is a difference between the approach of the developed hybrid solver and the dendrite - spine system with respect to geometry which is best summarized in figure \ref{application:geometry_difference}.\\
 
+\noindent The dendrite is approximated as a cylinder with radius $\sim10\mu$m and length $\sim50\mu$m. Furthermore, little of interest is assumed to happen in the radial direction. All things considered, diffusion in the dendrite will be modeled as a 1D process. \\
+
+\noindent Spines have a wide variety of geometries, with various properties. For this application, however, only the neck length and width of a spine is of interest. The spines will therefore be modeled as two dimensional objects with a funnel shape. 
 \begin{figure}[H]
  \centering
  \begin{subfigure}{0.48\textwidth}
@@ -32,7 +42,8 @@ There is a difference between the approach of the developed hybrid solver and th
 The hybrid diffusion solver has been slightly modified in order to recreate the new geometry. 
 Mathematically the largest difference is that the random walkers are left alone, meaning that the diffusion equation is not solved in the spines. 
 There are also some differences in the coupling; at each PDE time step there is a probability for an enzyme to diffuse into a spine if the concentration at the beginning of the spine neck is large enough. This probability decreases with the number of enzymes which have already diffused into the spine. 
-The width of a spine neck is determined by the number of PDE mesh points it connects to, all other length parameters are determined randomly but required to fit with measurements from Arrelano et.al \cite{arellano2007ultrastructure}. 
+The width of a spine neck is determined by the number of PDE mesh points it connects to, which is chosen at random. 
+All other length parameters are also determined randomly, but required to fit with measurements from Arrelano et.al \cite{arellano2007ultrastructure}. 
 
 \subsection{Initial Condition}
 
